# 148sp26-spring-2026-final-project-team-13

./: README.md
camera/: Dockerfile.lidar  docker-compose.yml  launch_camera_foxy_host.sh  launch_camera_host.sh
camera/ece191-ros2-depthai-camera/ros2_depthai_package/config/: camera.yaml
camera/ece191-ros2-depthai-camera/ros2_depthai_package/ros2_depthai_package/: camera_publisher.py  camera_publisher_original.py
fusion/: package.xml  setup.py
fusion/config/: camera_extrinsic_calibration.yaml  camera_intrinsic_calibration.yaml  camera_intrinsic_calibration_OLD.yaml  general_configuration.yaml
fusion/data/: 20260514_214654.pcd  20260514_215642.pcd
fusion/docker_rpi5/: Dockerfile  build.sh  launch.sh  run.sh
fusion/launch/: sensor_fusion.launch.py
fusion/src/: extract_points.py  get_extrinsic_camera_calibration.py  get_intrinsic_camera_calibration.py  hailo_detect_bridge.py  hailo_yolo_client.py  hailo_yolo_engine.py  lidar_camera_projection.py  lidar_camera_projection_detection.py  lidar_camera_projection_detection.py.save  lidar_camera_projection_future_test.py  lidar_camera_projection_test.py  obstacle_avoidance_node.py  save_sensor_data.py
lidar/: docker-compose.yml  launch_lidar_foxy_host.sh
lidar/ece191-ros2-livox-lidar/launch/: run.sh
shared/: build_all.sh  detect_livox_host_ip.sh  foxglove_bridge.sh  launch_camera.sh  launch_fusion.sh  launch_lidar.sh  restart_camera.sh  setup_livox_network.sh  start_all.sh  start_all_rpi5.sh  stop_all.sh  verify_camera.sh
shared/docs/: PI5_LAUNCH_GUIDE.md
shared/lib/: stack_common.sh
